HelloUltraviolet/Fixtures/RejectedSource/Statements/UniqueNonMoveBinding/Expected.uv
//! Expected diagnostic metadata for the UniqueNonMoveBinding rejected-source specimen.

expectedDiagnostic("E-MEM-3007", "rule.18.B-LetVar-UniqueNonMove-Err")
